Avoid the jumping of product cards on hover

--- a/react-image-upload/src/components/ProductCard.css
+++ b/react-image-upload/src/components/ProductCard.css
@@ -53,7 +53,6 @@
 
 .product-card:hover {
     box-shadow: 0 0 4rem 0 rgba(100, 100, 150, 0.4);
-    transform: translateY(-0.5rem);
 }
 
 .product-card-price {
